--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcsh 'Catholic Church -- Great Britain -- Early works to 1800'
 - !lcsh 'Catholics -- Great Britain -- Early works to 1800'
 - !lcc 'DA'
+- GITenberg
 title: "The Condition of Catholics Under James I.\r\nFather Gerard's Narrative of\
   \ the Gunpowder Plot"
 url: http://www.gutenberg.org/ebooks/35501
